--- a/package.json
+++ b/package.json
@@ -1,30 +1,44 @@
 {
-  "name": "pasai-patent-search",
+  "name": "patent-prior-art-search",
   "version": "1.0.0",
-  "description": "Automated Patent Prior Art Search and Analysis Platform",
-  "main": "src/index.html",
+  "description": "Comprehensive patent prior art search and analysis application",
+  "main": "server.js",
   "scripts": {
-    "start": "http-server src -p $PORT --cors -c-1",
-    "dev": "http-server src -p 8080 --cors -c-1",
-    "build": "echo 'Static site - no build required'"
+    "start": "node server.js",
+    "dev": "node server.js",
+    "build": "echo 'Static site - no build needed'",
+    "test": "echo 'Tests not implemented yet'"
   },
   "keywords": [
     "patent",
     "prior-art",
     "search",
     "analysis",
-    "lens-api"
+    "intellectual-property",
+    "lens-api",
+    "patent-search"
   ],
-  "author": "PASAI Team",
+  "author": "Patent Prior Art Search Team",
   "license": "MIT",
   "dependencies": {
-    "http-server": "^14.1.1"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "helmet": "^7.0.0",
+    "compression": "^1.7.4",
+    "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Artbellsonmamuri/PASAI"
+    "url": "https://github.com/your-username/patent-prior-art-search.git"
+  },
+  "homepage": "https://github.com/your-username/patent-prior-art-search#readme",
+  "bugs": {
+    "url": "https://github.com/your-username/patent-prior-art-search/issues"
   }
 }
