--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: pasai
+    name: pasai-patent-search
     env: node
     buildCommand: yarn install
     startCommand: yarn start
@@ -10,3 +10,15 @@ services:
         value: production
       - key: PORT
         generateValue: true
+      - key: OPENAI_API_KEY
+        sync: false
+      - key: LENS_TOKEN
+        sync: false
+      - key: GOOGLE_API_KEY
+        sync: false
+      - key: GOOGLE_CX
+        sync: false
+    routes:
+      - type: rewrite
+        source: /(.*)
+        destination: /index.html
